plex/ingress-plex.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-plex
  namespace: media
spec:
  selector: app == 'plex'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 32400
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app == 'sonarr' ||
          app == 'radarr'
      destination:
        ports:
          - 32400
